# GCD

./: CMakeLists.txt  README.md
source/: gcdfunc.cpp  gcdfunc.hpp  main.cpp
